--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ flask
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
+google-auth-transport
 google-api-python-client
 gspread
 firebase-admin
