--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-discord.py
-flask
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
+discord.py==2.4.0
+flask==3.1.0
+google-auth==2.38.0
+google-auth-oauthlib==1.2.1
+google-auth-httplib2==0.2.0
 google-auth-transport
 google-api-python-client
 gspread
