--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ flask==3.1.0
 google-auth==2.38.0
 google-auth-oauthlib==1.2.1
 google-auth-httplib2==0.2.0
+google-auth-transport==2.0.0
 google-api-python-client
 gspread
 firebase-admin
